# SuperDoc

./: .ackrc  .dockerignore  .gitignore  .prettierignore  .prettierrc  .releaserc.cjs  .releaserc.json  404.html  AGENTS.md  BLOB_SUPPORT_SUMMARY.md  CONTRIBUTING.md  README.md  blank.docx  cicd.md  eslint.config.docs.mjs  eslint.config.mjs  hashmap.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.references.json  vite.sourceResolve.ts  vitest.config.mjs
.husky/: pre-commit
advanced/: index.html
assets/: advanced_index.md.DlHVyktC.js  advanced_index.md.DlHVyktC.lean.js  advanced_index.md.hzz317Ss.js  advanced_index.md.hzz317Ss.lean.js  app.5PNqECpo.js  app.BL2ML06Q.js  app.BgK9Ql-R.js  app.BhFV9kPp.js  app.Bk9CoHKH.js  app.Bu3-CUJp.js  app.ClBwc8CD.js  app.CyeE-i2g.js  app.D0Jq2bdh.js  app.D27KH00_.js  app.FRXHpZnK.js  app.OzrY4own.js  app.yRr8_c80.js  collaboration_index.md.CYQLSsWx.js  collaboration_index.md.CYQLSsWx.lean.js  components_index.md.AQAThxtg.js  components_index.md.AQAThxtg.lean.js  components_index.md.Cb5CNV-X.js  components_index.md.Cb5CNV-X.lean.js  components_index.md.ClWVGxm4.js  components_index.md.ClWVGxm4.lean.js  components_index.md.DmYQQxpU.js  components_index.md.DmYQQxpU.lean.js  components_index.md.tD7tjZFj.js  components_index.md.tD7tjZFj.lean.js  guide_accessibility.md.iN37aswE.js  guide_accessibility.md.iN37aswE.lean.js  guide_advanced.md.rSxOnxpK.js  guide_advanced.md.rSxOnxpK.lean.js  guide_collaboration.md.D7SVqU-u.js  guide_collaboration.md.D7SVqU-u.lean.js  guide_components.md.B8CACHPM.js  guide_components.md.B8CACHPM.lean.js  guide_configuration.md.QA6QhYyX.js  guide_configuration.md.QA6QhYyX.lean.js  guide_field-annotation.md.Bv3fuS61.js  (+51 more)
collaboration/: index.html
components/: index.html
docs/: package-lock.json  typescript-migration.md
e2e-tests/: Dockerfile  README.md  package-lock.json  package.json  playwright.config.js  test-config.js
sdks/langs/python/: MANIFEST.in  README.md  pyproject.toml  superdoc_sdk.py
sdks/langs/python/example/: example.py  fastapi_example.py
sdks/langs/python/scripts/: build_wheel.py
(+377 files in other folders)
